--- a/introduccion/index.html
+++ b/introduccion/index.html
@@ -15,5 +15,6 @@
     <button id="boton-Saludar">saludar</button>
 
     <script src="./main.js"></script>
+    <script src="./clase2.js"></script>
   </body>
 </html>
