--- a/introduccion/index.html
+++ b/introduccion/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,5 +16,6 @@
 
     <script src="./main.js"></script>
     <script src="./clase2.js"></script>
+    <script src="./clase3.js"></script>
   </body>
 </html>
